--- a/FirstTest/app/src/main/res/layout/activity_draw.xml
+++ b/FirstTest/app/src/main/res/layout/activity_draw.xml
@@ -3,14 +3,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical" >
 
-    <!--<Button-->
-        <!--android:layout_width="wrap_content"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:text="选择图片"-->
-        <!--android:id="@+id/button"-->
-    <!--/>-->
-    <!---->
-    <com.example.draw.DrawView
+    <test.AnDraw.DrawView
         android:id="@+id/drawView"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
