--- a/FirstTest/app/src/main/res/layout/activity_main.xml
+++ b/FirstTest/app/src/main/res/layout/activity_main.xml
@@ -9,8 +9,16 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="选择图片"
-        android:id="@+id/button"
-        android:layout_below="@+id/textView"
+        android:id="@+id/button1"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="新建画板"
+        android:id="@+id/button2"
+        android:layout_below="@+id/button1"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
 
