--- a/FirstTest/app/src/main/res/layout/activity_draw.xml
+++ b/FirstTest/app/src/main/res/layout/activity_draw.xml
@@ -5,8 +5,8 @@
 
     <test.AnDraw.DrawView
         android:id="@+id/drawView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
         android:layout_gravity="center_horizontal|center_vertical|center"
      />
 
