--- a/FirstTest/app/src/main/res/layout/activity_draw_pic.xml
+++ b/FirstTest/app/src/main/res/layout/activity_draw_pic.xml
@@ -1,13 +1,13 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical" >
+    tools:context="test.AnDraw.DrawPicActivity">
 
     <test.AnDraw.DrawView
         android:id="@+id/drawView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
         android:layout_gravity="center_horizontal|center_vertical|center"
-     />
+        />
 
-</LinearLayout>
+</RelativeLayout>
