--- a/FirstTest/app/src/main/res/menu/menu_draw_blank.xml
+++ b/FirstTest/app/src/main/res/menu/menu_draw_blank.xml
@@ -1,9 +1,10 @@
+<?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android" >
     <item android:title="画笔颜色">
         <menu>
             <group android:checkableBehavior="single">
                 <item android:id="@+id/color_red" android:title="红色"/>
-                <item android:id="@+id/color_green" android:title="绿色"/>
+                <item android:id="@+id/color_black" android:title="黑色"/>
                 <item android:id="@+id/color_blue" android:title="蓝色"/>
             </group>
         </menu>
@@ -11,13 +12,24 @@
 
     <item android:title="画笔宽度">
         <menu>
-            <group>
+            <group android:checkableBehavior="single">
                 <item android:id="@+id/width_1" android:title="10"/>
                 <item android:id="@+id/width_2" android:title="20"/>
                 <item android:id="@+id/width_3" android:title="30"/>
             </group>
         </menu>
     </item>
+
+    <item android:title="背景颜色">
+        <menu>
+            <group android:checkableBehavior="single">
+                <item android:id="@+id/background_white" android:title="白色"/>
+                <item android:id="@+id/background_black" android:title="黑色"/>
+                <item android:id="@+id/background_red" android:title="红色"/>
+            </group>
+        </menu>
+    </item>
+
     <item android:id="@+id/clear" android:title="擦除"/>
     <item android:id="@+id/reset" android:title="恢复"/>
     <item android:id="@+id/save" android:title="保存"/>
