--- a/FirstTest/app/src/main/res/menu/menu_draw_pic.xml
+++ b/FirstTest/app/src/main/res/menu/menu_draw_pic.xml
@@ -12,7 +12,7 @@
 
     <item android:title="画笔宽度">
         <menu>
-            <group>
+            <group android:checkableBehavior="single">
                 <item android:id="@+id/width_1" android:title="10"/>
                 <item android:id="@+id/width_2" android:title="20"/>
                 <item android:id="@+id/width_3" android:title="30"/>
