--- a/FirstTest/app/src/main/res/menu/menu_draw_pic.xml
+++ b/FirstTest/app/src/main/res/menu/menu_draw_pic.xml
@@ -3,9 +3,9 @@
     <item android:title="画笔颜色">
         <menu>
             <group android:checkableBehavior="single">
+                <item android:id="@+id/color_white" android:title="白色"/>
+                <item android:id="@+id/color_black" android:title="黑色"/>
                 <item android:id="@+id/color_red" android:title="红色"/>
-                <item android:id="@+id/color_green" android:title="绿色"/>
-                <item android:id="@+id/color_blue" android:title="蓝色"/>
             </group>
         </menu>
     </item>
@@ -29,7 +29,7 @@
             </group>
         </menu>
     </item>
-    <item android:id="@+id/reset" android:title="恢复"/>
+    <item android:id="@+id/reset" android:title="重置"/>
     <item android:id="@+id/save" android:title="保存"/>
 
 </menu>
