--- a/FirstTest/app/src/main/res/layout/activity_main.xml
+++ b/FirstTest/app/src/main/res/layout/activity_main.xml
@@ -1,26 +1,68 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">
+    android:layout_height="match_parent" tools:context=".MainActivity"
+    >
 
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="选择图片"
-        android:id="@+id/button1"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+    <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:orientation="vertical"
+        android:background="@color/orange_bg"
 
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="新建画板"
-        android:id="@+id/button2"
-        android:layout_below="@+id/button1"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+ >
+
+        <LinearLayout
+            android:layout_width="fill_parent"
+            android:layout_height="1dp"
+            android:orientation="vertical"
+            android:id="@+id/blank_main">
+
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+
+            android:id="@+id/container_main"
+            android:orientation="vertical">
+
+            <ImageView
+                android:id="@+id/icon_main"
+                android:layout_gravity="top|center"
+                android:layout_marginTop="0dp"
+                android:layout_width="360dp"
+                android:layout_height="360dp"
+                android:orientation="vertical"
+                android:src="@drawable/icon2"
+                android:paddingLeft="@dimen/icon_horizontal_margin"
+                android:paddingRight="@dimen/icon_horizontal_margin"
+
+
+                > </ImageView>
+
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="选择图片"
+                android:id="@+id/button1"
+                android:layout_gravity="center"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true" />
+
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="新建画板"
+                android:id="@+id/button2"
+                android:layout_gravity="center"
+                android:layout_below="@+id/button1"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true" />
+        </LinearLayout>
+
+
+    </LinearLayout>
+
+
 
 
 </RelativeLayout>
